--- a/app/src/main/res/layout/centergridlayout.xml
+++ b/app/src/main/res/layout/centergridlayout.xml
@@ -8,5 +8,6 @@
         android:numColumns="3"
         android:id="@+id/centergridview"
         android:verticalSpacing="50dp"
+       android:layout_centerInParent="true"
          />
 </RelativeLayout>
