--- a/app/src/main/res/layout/bottomlayout.xml
+++ b/app/src/main/res/layout/bottomlayout.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@drawable/bottombackground"
     android:layout_height="68dp">
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="68dp"
+        android:layout_height="58dp"
         android:layout_alignParentBottom="true"
         android:layout_margin="4dp">
 
         <ImageView
             android:id="@+id/iv_bottomimage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/aacon"
             android:layout_marginLeft="20dp" />
 
         <TextView
@@ -29,10 +31,11 @@
 
         <ImageView
             android:id="@+id/tv_bottomimage1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/menuicon"
             android:layout_marginRight="20dp" />
     </RelativeLayout>
 
