--- a/app/src/main/res/layout/gridiconlayout.xml
+++ b/app/src/main/res/layout/gridiconlayout.xml
@@ -14,8 +14,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:text="Medium Text"
+
         android:id="@+id/tv_icontext"
          />
 </LinearLayout>
