--- a/app/src/main/res/layout/useritemlayout.xml
+++ b/app/src/main/res/layout/useritemlayout.xml
@@ -6,12 +6,13 @@
     android:id="@+id/iv_userimage"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="10dp"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent" />
+    android:layout_width="50dp"
+    android:layout_height="50dp" />
     <TextView
         android:id="@+id/tv_username"
         android:layout_toRightOf="@id/iv_userimage"
         android:layout_width="wrap_content"
-
+        android:textSize="20dp"
+        android:layout_centerInParent="true"
         android:layout_height="match_parent" />
 </RelativeLayout>
