--- a/app/src/main/res/layout/userlayout.xml
+++ b/app/src/main/res/layout/userlayout.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:listSelector="@drawable/griditemselecter"
         android:id="@+id/lv_userlistview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
