--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,8 @@
         <item name="android:cacheColorHint">#00000000</item>
         <item name="android:divider">@drawable/listviewdivider</item>
     </style>
+    <style name="textstyle">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
