finish type manage it can work now

--- a/app/src/main/res/layout/edit_or_add_type_layout.xml
+++ b/app/src/main/res/layout/edit_or_add_type_layout.xml
@@ -1,26 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-<EditText
-    android:id="@+id/et_editoraddtypename"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="match_parent">
+
+    <EditText
+        android:id="@+id/et_editoraddtypename"
+        android:layout_marginTop="100dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
     <Spinner
         android:id="@+id/sp_typeselectspinner"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"></Spinner>
+        android:layout_alignParentLeft="true"
+        android:layout_margin="50dp"
+        android:layout_below="@id/et_editoraddtypename"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"></Spinner>
+
     <Button
         android:id="@+id/bt_typesavebutton"
-        android:layout_width="20dp"
-        android:layout_height="80dp"
-        android:text="@string/_ssavebutton"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="@string/_ssavebutton" />
+
     <Button
         android:id="@+id/bt_typecancelbutton"
-        android:layout_width="20dp"
-        android:layout_height="80dp"
-        android:text="@string/_scancelbutton"
-        />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="@string/_scancelbutton" />
 
 
 </RelativeLayout>
