--- a/app/src/main/res/layout/typechildlayout.xml
+++ b/app/src/main/res/layout/typechildlayout.xml
@@ -2,6 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 <TextView
+    style="@style/textstyle"
+    android:layout_marginLeft="20dp"
+    android:textSize="25dp"
     android:id="@+id/tv_ChildTypeName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
