--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,9 @@
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="NumberButtonText">
+        <item name="android:textSize">22.0px</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#ff000000</item>
+    </style>
 </resources>
