record function fix

--- a/app/src/main/res/layout/typelayout.xml
+++ b/app/src/main/res/layout/typelayout.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 <ExpandableListView
+    android:background="@drawable/mainbackground"
     android:id="@+id/el_typeview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"></ExpandableListView>
