--- a/app/src/main/res/layout/dialog_list.xml
+++ b/app/src/main/res/layout/dialog_list.xml
@@ -5,5 +5,7 @@
 <ListView
     android:id="@+id/ListViewSelect"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"></ListView>
+    android:layout_height="wrap_content"
+    android:background="@drawable/mainbackground"
+    ></ListView>
 </LinearLayout>
