--- a/app/src/main/res/layout/edit_or_add_payout_layout.xml
+++ b/app/src/main/res/layout/edit_or_add_payout_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content">
+    android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:padding="10dp"
+    >
 <TableLayout
     android:id="@+id/tl_payoutbutton"
     android:layout_alignParentBottom="true"
