fix book bug (now you can't delete default book and not see deleted book)

--- a/app/src/main/res/layout/over_all_layout.xml
+++ b/app/src/main/res/layout/over_all_layout.xml
@@ -10,11 +10,10 @@
         layout="@layout/headlayout"></include>
 
 
-
     <include
         android:id="@+id/bottomlayout1"
-        layout="@layout/bottomlayout"
-></include>
+        layout="@layout/bottomlayout"></include>
+
     <LinearLayout
         android:id="@+id/maincenterlayout"
         android:layout_width="match_parent"
